--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@
   min-width: 500px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
+  padding: 10px;
   border-radius: 20px;
 }
 
